<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <!-- App icon -->
    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/app_name"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/appTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- App name -->
    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:letterSpacing="0.05"
        app:layout_constraintTop_toBottomOf="@id/appIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tagline" />

    <!-- Tagline -->
    <TextView
        android:id="@+id/tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tagline"
        android:textSize="15sp"
        android:textColor="@color/text_hint"
        android:letterSpacing="0.1"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintTop_toBottomOf="@id/appTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/openStockSearchButton" />

    <!-- CTA Button -->
    <Button
        android:id="@+id/openStockSearchButton"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:text="@string/open_stock_search"
        android:textSize="16sp"
        android:textColor="@color/colorOnSecondary"
        android:textStyle="bold"
        android:background="@drawable/btn_rounded"
        android:letterSpacing="0.03"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tagline"
        app:layout_constraintBottom_toTopOf="@+id/groupNameText"
        app:layout_constraintWidth_percent="0.7" />

    <!-- Group name at bottom -->
    <TextView
        android:id="@+id/groupNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_name"
        android:textSize="13sp"
        android:textColor="@color/text_hint"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
